k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secondhand
  labels:
    managed-by: flux
