k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secondhand-api
  namespace: secondhand
  labels:
    app: secondhand-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secondhand-api
  template:
    metadata:
      labels:
        app: secondhand-api
    spec:
      imagePullSecrets:
        - name: registry-nofutur3
      containers:
        - name: api
          image: registry.nofutur3.com/secondhand-api:sha-ab5170d157f2c116700e11b2f049e734430086d1
          ports:
            - containerPort: 8091
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: secondhand-api
  namespace: secondhand
spec:
  selector:
    app: secondhand-api
  ports:
    - port: 8091
      targetPort: 8091
