k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secondhand-frontend
  namespace: secondhand
  labels:
    app: secondhand-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secondhand-frontend
  template:
    metadata:
      labels:
        app: secondhand-frontend
    spec:
      imagePullSecrets:
        - name: registry-nofutur3
      containers:
        - name: frontend
          image: registry.nofutur3.com/secondhand-frontend:sha-ab5170d157f2c116700e11b2f049e734430086d1
          ports:
            - containerPort: 8092
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: secondhand-frontend
  namespace: secondhand
spec:
  selector:
    app: secondhand-frontend
  ports:
    - port: 8092
      targetPort: 8092
