k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secondhand
  namespace: secondhand
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - snoopy.nofutur3.com
      secretName: secondhand-tls
  rules:
    - host: snoopy.nofutur3.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: secondhand-api
                port:
                  number: 8091
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secondhand-frontend
                port:
                  number: 8092
